Correctly aligning breadcrumb after hover change

--- a/wagtailbettereditor/static_src/wagtailbettereditor/scss/wagtailbettereditor.scss
+++ b/wagtailbettereditor/static_src/wagtailbettereditor/scss/wagtailbettereditor.scss
@@ -406,6 +406,7 @@ header {
       padding: 1.5em 1.3em;
       &:first-child {
       margin: -10px;
+      padding-left: 40px;
       }
       &:hover {
         background-color: $color-teal-light;
